--- a/Front/src/assets/css/style.css
+++ b/Front/src/assets/css/style.css
@@ -28,7 +28,7 @@ a:hover,a:focus{text-decoration:none;color:#357cf4;}
 .nav-box ul li{float:left;margin-left:30px;}
 .nav-box ul li a{cursor:pointer;color:#333;display:inline-block;font-size:12px;}
 .nav-box ul li a:hover{color:#357cf3;}
-/*
+
 #sliderPricing{background:#fff;color:#ababab;text-align:center}#sliderPricing h2{text-align:center;padding-bottom:70px}
 #sliderPricing ul li{list-style:none}
 #sliderPricing label{font-weight:600;color:#000}
@@ -47,10 +47,11 @@ a:hover,a:focus{text-decoration:none;color:#357cf4;}
 #sliderPricing .overages,#sliderPricing .prepay{font-size:32px;line-height:100%}
 #sliderPricing .mainPriceLittle{font-size:42px;line-height:100%}
 #sliderPricing .eventsSliderBox{margin-bottom:80px}
-#sliderPricing .eventsSliderBox .eventsSliderNumber{margin-top:-3px;width:49.3%;border:1px solid #ddd;border-radius:2px;height:38px;line-height:38px;font-size:14px;text-indent:5px;color:#636363;float:left;}
+#sliderPricing .eventsSliderBox .eventsSliderNumber{margin-top:-3px;margin-left: 15px;width:49.3%;border:1px solid #ddd;border-radius:2px;height:38px;line-height:38px;font-size:14px;text-indent:5px;color:#636363;float:left;}
 .register-btn{margin-top:-3px;background:#357cf3;color:#fff;border:none;line-height:38px;height:38px;border-radius:2px;width:49.3%;text-align:center;float:right;}
 #sliderPricing section .col-md-3{margin-top:10px}
 #sliderPricing .sliderResults{min-height:180px}
+
 .jslider{background:#ccced0;border-radius:2px;box-shadow:inset 0 2px 6px rgba(0,0,0,.08);height:12px!important;display:block;width:100%;height:1em;position:relative;top:.6em}
 .jslider .jslider-pointer{background:url("../img/la-bg.png") no-repeat left;background-size:100%;display:inline-block;width:48px;height:32px;position:absolute;left:0;top:-11px;margin-left:-12px;cursor:pointer;}
 .jslider table{width:100%;border-collapse:collapse;border:0}
@@ -61,7 +62,7 @@ a:hover,a:focus{text-decoration:none;color:#357cf4;}
 .jslider .jslider-scale{position:relative;top:9px}
 .jslider .jslider-scale span{position:absolute;height:5px;border-left:1px solid #999;font-size:0}
 .jslider .jslider-scale ins{font-size:9px;text-decoration:none;position:absolute;left:0;top:5px;color:#999}
-.jslider-single .jslider-bg .v,.jslider-single .jslider-label,.jslider-single .jslider-pointer-to,.jslider-single .jslider-value-to{display:none}*/
+.jslider-single .jslider-bg .v,.jslider-single .jslider-label,.jslider-single .jslider-pointer-to,.jslider-single .jslider-value-to{display:none}
 .title{font-size:32px;text-align:center;margin:80px 0 100px 0;line-height:48px;}
 .pricing-box{margin:0 auto 80px auto;}
 .pricing-box .li-con{width:24.15%;float:left;margin-right: 8px;}
