支付页面修改

--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -1362,6 +1362,10 @@ h1.setting-title{
     text-align: center;
     visibility: hidden;
 }
+.my-price.my-price-select{
+    float: none;
+    margin:0 auto;
+}
 /*.plan-select.isVisiable{
     visibility: inherit;
 }*/
