--- a/www.newbidder.com/css/style.css
+++ b/www.newbidder.com/css/style.css
@@ -33,7 +33,7 @@ a:hover,a:focus{text-decoration:none;color:#357cf4;}
     color: #333;
     background:rgba(255,255,255,.7);
     transform: translate3d(-50%, -50%, 0);
-    padding: 0.7em calc(0.7em * 1.2);
+    padding:6px 10px;
     display: inline-block;
     font-size:13px;}
 .nav-box ul li a:hover{color:#357cf3;}
@@ -95,7 +95,7 @@ a:hover,a:focus{text-decoration:none;color:#357cf4;}
 .banner-col{margin:120px auto 0 auto;background:url("../img/banner-bg.png") no-repeat left top;background-size:60%;padding-bottom:50px;}
 .banner-col-r{font-family:"Avenir Next", Verdana, Helvetica, Tahoma, Arial, "\5b8b\4f53", sans-serif;float:right;padding-right:115px;}
 .banner-col h1{font-size:26px;text-align:right;margin:30px 0;display:block;padding-top:10px;color:#868e96;font-weight:600;padding-right:115px;}
-.banner-col h2 b{color:#393939;}
+.banner-col h1 b{color:#393939;}
 .banner-col-r ul{text-align:right;color:#fff;font-size:15px;float:right;width:50%;}
 .banner-col-r ul li{float:right;background:#357cf4;padding:8px 12px;margin-bottom:8px;}
 .banner-col-r ul li.active{background:#00aa83;}
@@ -169,7 +169,7 @@ a:hover,a:focus{text-decoration:none;color:#357cf4;}
 #sliderPricing .sliderResults{min-height:180px}
 .jslider{background:#ccced0;border-radius:2px;box-shadow:inset 0 2px 6px rgba(0,0,0,.08);height:12px!important;display:block;width:100%;height:1em;position:relative;top:.6em}
 .jslider .jslider-pointer{background:url("../img/la-bg.png") no-repeat left;background-size:100%;display:inline-block;width:48px;height:32px;position:absolute;left:0;top:-11px;margin-left:-12px;cursor:pointer;}
-.jslider table{width:100%;border-collapse:collapse;border:0}
+.jslider table{width:100%;border-collapse:collapse;border:0;}
 .jslider .jslider th,.jslider td{padding:0;vertical-align:top;text-align:left;border:0}
 .jslider table,.jslider table tr,.jslider table tr td{width:80%;vertical-align:top}
 .jslider .jslider-bg{position:relative}
@@ -395,6 +395,7 @@ input {outline: none;}
 .trk-md-img{width:92%;margin:0 auto;}
 .compare-table h4{margin-bottom:20px;font-weight:600;font-size:18px;}
 #compare{font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;font-size:.9em;line-height:20px;margin-bottom:80px;}
+#compare table{width:100%;overflow:hidden;}
 #compare td+td{border:1px solid #fff;}
 #compare td{padding:15px 10px;text-align:center;vertical-align:middle;color:#333;}
 #compare tr:first-child{border-style:solid;border-width:2px 2px 0 2px;border-color:#357cf4 #fff transparent #fff;}
